<resources>
    <string name="app_name">Cogito</string>
    <string name="title_home">Home</string>
    <string name="title_saved">Saved</string>
    <string name="title_history">History</string>
    <string name="title_settings">Settings</string>
    <string name="home_subtitle">Configure your mindfulness session.</string>
    <string name="home_primary_btn">Start</string>
    <string name="home_secondary_btn">Save</string>
    <string name="home_section_general">General</string>
    <string name="home_section_bells">Bells</string>
    <string name="home_field_duration">Duration</string>
    <string name="home_field_music">Background Music</string>
    <string name="home_field_start_bell">Start Bell Sound</string>
    <string name="home_field_end_bell">End Bell Sound</string>
    <string name="home_field_intermediate_bell">Intermediate Bell Sound</string>
    <string name="home_field_num_intermediate_bells">Intermediate Bells</string>
    <string name="home_value_not_set">Not set</string>
    <string name="dialog_duration_title">Set Duration</string>
    <string name="dialog_duration_done_btn">Done</string>
    <string name="dialog_duration_subtitle">Please set the duration of the session in minutes.</string>
    <string name="dialog_music_title">Select Background Music</string>
    <string name="dialog_music_done_btn">Done</string>
    <string name="dialog_music_subtitle">Please choose a background music</string>
    <string name="dialog_name_title">Name Configuration</string>
    <string name="dialog_name_save_btn">Save</string>
    <string name="dialog_name_subtitle">Please provide a name for your session configuration.</string>
    <string name="dialog_bell_start_title">Select Start Bell Sound</string>
    <string name="dialog_bell_intermediate_title">Select Intermediate Bell Sound</string>
    <string name="dialog_bell_end_title">Select End Bell Sound</string>
    <string name="dialog_bell_done_btn">Done</string>
    <string name="dialog_bell_subtitle">Please choose a bell sound.</string>
    <string name="dialog_num_intbells_title">Set Intermediate Bells</string>
    <string name="dialog_num_intbells_done_btn">Done</string>
    <string name="dialog_num_intbells_subtitle">Please set the desired number of intermediate bells. The value should be smaller than the duration of the session.</string>
    <string name="session_pause_btn">Pause session</string>
    <string name="session_rewind_10_btn">10 sec</string>
    <string name="session_forward_10_btn">10 sec</string>
    <string name="session_continue_btn">Continue session</string>
    <string name="session_end_btn">End session</string>
    <string name="session_title">My Session</string>
    <string name="session_subtitle">Use your headphones for a more immersive experience.</string>
    <string name="session_timer">00:00</string>
    <string name="saved_add_btn">Add</string>
    <string name="item_edit">Edit Configuration</string>
    <string name="item_rename">Rename</string>
    <string name="item_delete">Delete</string>
    <string name="configsettings_title_add">New Configuration</string>
    <string name="configsettings_title_edit">Edit</string>
    <string name="configsettings_subtitle_add">Configure your new mindfulness session.</string>
    <string name="configsettings_subtitle_edit">Edit your mindfulness session.</string>
    <string name="configsettings_cancel_btn">Cancel</string>
    <string name="configsettings_save_btn">Save</string>
    <string name="delete_confirmation_title">Delete This Configuration?</string>
    <string name="delete_confirmation_cancel">No, go back.</string>
    <string name="delete_confirmation_proceed">Yes, delete.</string>
    <string name="validation_failed_title">Too Many Intermediate Bells</string>
    <string name="validation_failed_message">The number of intermediate bells should be smaller than the overall duration of the session.</string>
    <string name="validation_failed_fix">Ok, I will change it.</string>
    <string name="checkin_title">How are you?</string>
    <string name="checkin_subtitle">How are you feeling today? Keeping track of mood improves self-regulation.</string>
    <string name="checkin_submit_btn">Submit</string>
    <string name="checkin_skip_btn">Skip</string>
    <string name="mood_happy">Happy</string>
    <string name="mood_excited">Excited</string>
    <string name="mood_grateful">Grateful</string>
    <string name="mood_relaxed">Relaxed</string>
    <string name="mood_content">Content</string>
    <string name="mood_tired">Tired</string>
    <string name="mood_unsure">Unsure</string>
    <string name="mood_bored">Bored</string>
    <string name="mood_anxious">Anxious</string>
    <string name="mood_angry">Angry</string>
    <string name="mood_stressed">Stressed</string>
    <string name="mood_sad">Sad</string>
    <string name="mood_none">None</string>
    <string name="history_section_date">dd/MM/YYYY</string>
    <string name="history_field_num_sessions">Mindful Sessions</string>
    <string name="history_field_mood">Daily Check-in</string>
    <string name="history_value_not_set">Not Set</string>
    <string name="dialog_mood_title">Daily Check-In</string>
    <string name="dialog_mood_done_btn">Done</string>
    <string name="dialog_mood_subtitle">Keeping track of mood improves self-regulation.</string>
    <string name="done_title">Well Done!</string>
    <string name="done_text1"><b>You\'ve completed your mindfulness session. Congratulations! </b>🎉 Take a deep breath and appreciate this moment.</string>
    <string name="done_text2">Remember that mindfulness takes time and practice, so <b>don\'t worry if you found yourself getting distracted or feeling overwhelmed</b>. This is a natural part of the process! 😊 <b>Be kind to yourself</b> and acknowledge any emotions that come up during the practice.</string>
    <string name="done_text3">Over time, you will notice that <b>your ability to focus and stay present will improve</b>. Keep up the great work! ✨</string>
    <string name="done_ok_btn">Ok. Great!</string>
    <string name="settings_value_not_set">Not set</string>
    <string name="settings_section_formal">Practice Reminders</string>
    <string name="settings_field_enable_formal">Enable</string>
    <string name="settings_field_num_formal">Reminders per day</string>
    <string name="settings_field_formal1">Reminder 1</string>
    <string name="settings_field_formal2">Reminder 2</string>
    <string name="settings_field_formal3">Reminder 3</string>
    <string name="settings_field_formal4">Reminder 4</string>
    <string name="settings_field_formal5">Reminder 5</string>
    <string name="settings_section_informal">Mindful Moments Reminders</string>
    <string name="settings_field_num_informal">Reminders per day</string>
    <string name="settings_field_enable_informal">Enable</string>
    <string name="dialog_numformal_title">Practice Reminders</string>
    <string name="dialog_numformal_done_btn">Done</string>
    <string name="dialog_numformal_subtitle">Please choose how many reminders you would like to receive per day to practice mindfulness.</string>
    <string name="dialog_numinformal_title">Mindful Moments Reminders</string>
    <string name="dialog_numinformal_done_btn">Done</string>
    <string name="dialog_numinformal_subtitle">Please choose how many notifications you would like to receive throughout the day to help you stay mindful.</string>
    <string name="dialog_formaltime_title">Set Reminder Time</string>
    <string name="dialog_formaltime_done_btn">Done</string>
    <string name="dialog_formaltime_subtitle">Please pick a time for the mindfulness practice reminder.</string>
    <string name="notification_formal_title">Time to meditate!</string>
    <string name="notification_formal_text">Hey there, it’s time for our mindfulness practice! \ud83d\ude04</string>
    <string name="notification_informal_1_title">Experiencing the present</string>
    <string name="notification_informal_1_text">The little things? The little moments? They aren’t little. \ud83d\ude04</string>
    <string name="notification_informal_2_title">Cultivating mindfulness</string>
    <string name="notification_informal_2_text">The best way to capture moments is to pay attention. This is how we cultivate mindfulness. \ud83d\ude04</string>
    <string name="notification_informal_3_title">Be mindful of the present</string>
    <string name="notification_informal_3_text">The present moment is the only time over which we have dominion.</string>
    <string name="notification_informal_4_title">Live the moment</string>
    <string name="notification_informal_4_text">Live the actual moment. Only this actual moment is life. \ud83d\ude04</string>
    <string name="notification_informal_5_title">The power of acceptance</string>
    <string name="notification_informal_5_text">What would it be like if I could accept life – accept this moment – exactly as it is?</string>
    <string name="notification_informal_6_title">Focus on what you are doing now</string>
    <string name="notification_informal_6_text">Do not dwell in the past or in the future, concentrate the mind on the present moment.</string>
    <string name="notification_informal_7_title">Experience every moment as it happens</string>
    <string name="notification_informal_7_text">Wherever you are, be there totally. \ud83d\ude04</string>
    <string name="notification_informal_8_title">Nothing but the present</string>
    <string name="notification_informal_8_text">Realize deeply that the present moment is all you have.</string>
    <string name="notification_informal_9_title">Let go of your worries</string>
    <string name="notification_informal_9_text">Worrying is stupid, it’s like walking around with an umbrella waiting for it to rain. </string>
    <string name="notification_informal_10_title">Just breathe</string>
    <string name="onboarding2_text0a">As opposed to traditional voice-guided meditation apps, Cogito gives you the tools to <b>practice independently</b> and <b>fully personalise your experience</b>.</string>
    <string name="onboarding2_text0b">And… <b>you can use it both for formal practice</b>, such as meditation and breathing exercises, <b>or during your day-to-day activities</b>. Isn\'t that awesome?! 😆 </string>
    <string name="onboarding2_sect1">How does it work?</string>
    <string name="onboarding2_text1a">With our app, you can customise your practice through configurations. <b>Think of a configuration like a recipe</b> for your mindfulness session 🥗: you can choose <b>how long you want to practice for</b> and <b>what type of music you want to listen to</b> in the background. The right music can help create a more peaceful atmosphere to deepen your experience. </string>
    <string name="onboarding2_text1b">Additionally, <b>you can set different bell sounds to play throughout your session</b> - bells serve as gentle reminders to bring your attention back to the present moment, in case your mind starts to wander.</string>
    <string name="onboarding2_text1c">Once you\'ve created your perfect recipe, <b>simply hit play and… let your session begin!</b> 😉</string>
    <string name="onboarding2_sect2">What do I do during a session?</string>
    <string name="onboarding2_sect3">Is it for me?</string>
    <string name="onboarding2_text3">Although our app is designed with experienced mindfulness practitioners in mind, <b>beginners are absolutely welcome to use it as well</b>. We believe that <b>mindfulness is a journey, and everyone has to start somewhere.</b></string>
    <string name="onboarding2_text4">We hope you find our app helpful in your mindfulness journey. <b>Happy practicing!</b> 😊</string>
    <string name="onboarding2_text2_mod">Please switch to tab \'Tips\' for information on how practice mindfulness effectively.</string>
</resources>