<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingHorizontal="24dp"
    android:paddingBottom="24dp">

    <LinearLayout
        android:id="@+id/title_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/readex_pro_medium"
            android:text="@string/checkin_title"
            android:textColor="@color/black"
            android:textSize="24sp" />

        <View
            android:layout_width="44dp"
            android:layout_height="4dp"
            android:background="@drawable/blue_rounded_rectangle" />
    </LinearLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginVertical="24dp"
        app:layout_constraintBottom_toTopOf="@+id/checkin_skip_btn"
        app:layout_constraintTop_toBottomOf="@id/subtitle">

        <com.google.android.material.chip.ChipGroup
            android:id="@+id/chip_group"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:chipSpacingVertical="12dp"
            app:singleSelection="true">

            <com.google.android.material.chip.Chip
                android:id="@+id/chip_happy"
                style="@style/ChipCustomStyle"
                android:layout_width="wrap_content"
                android:layout_height="48dp"
                android:text="@string/mood_happy"
                app:chipIcon="@drawable/emoji_happy"/>

            <com.google.android.material.chip.Chip
                android:id="@+id/chip_excited"
                style="@style/ChipCustomStyle"
                android:layout_width="wrap_content"
                android:layout_height="48dp"
                android:text="@string/mood_excited"
                app:chipIcon="@drawable/emoji_excited"/>

            <com.google.android.material.chip.Chip
                android:id="@+id/chip_grateful"
                style="@style/ChipCustomStyle"
                android:layout_width="wrap_content"
                android:layout_height="48dp"
                android:text="@string/mood_grateful"
                app:chipIcon="@drawable/emoji_grateful"/>

            <com.google.android.material.chip.Chip
                android:id="@+id/chip_relaxed"
                style="@style/ChipCustomStyle"
                android:layout_width="wrap_content"
                android:layout_height="48dp"
                android:text="@string/mood_relaxed"
                app:chipIcon="@drawable/emoji_relaxed"/>

            <com.google.android.material.chip.Chip
                android:id="@+id/chip_content"
                style="@style/ChipCustomStyle"
                android:layout_width="wrap_content"
                android:layout_height="48dp"
                android:text="@string/mood_content"
                app:chipIcon="@drawable/emoji_content"/>

            <com.google.android.material.chip.Chip
                android:id="@+id/chip_tired"
                style="@style/ChipCustomStyle"
                android:layout_width="wrap_content"
                android:layout_height="48dp"
                android:text="@string/mood_tired"
                app:chipIcon="@drawable/emoji_tired"/>

            <com.google.android.material.chip.Chip
                android:id="@+id/chip_unsure"
                style="@style/ChipCustomStyle"
                android:layout_width="wrap_content"
                android:layout_height="48dp"
                android:text="@string/mood_unsure"
                app:chipIcon="@drawable/emoji_unsure"/>

            <com.google.android.material.chip.Chip
                android:id="@+id/chip_bored"
                style="@style/ChipCustomStyle"
                android:layout_width="wrap_content"
                android:layout_height="48dp"
                android:text="@string/mood_bored"
                app:chipIcon="@drawable/emoji_bored"/>

            <com.google.android.material.chip.Chip
                android:id="@+id/chip_anxious"
                style="@style/ChipCustomStyle"
                android:layout_width="wrap_content"
                android:layout_height="48dp"
                android:text="@string/mood_anxious"
                app:chipIcon="@drawable/emoji_anxious"/>

            <com.google.android.material.chip.Chip
                android:id="@+id/chip_angry"
                style="@style/ChipCustomStyle"
                android:layout_width="wrap_content"
                android:layout_height="48dp"
                android:text="@string/mood_angry"
                app:chipIcon="@drawable/emoji_angry"/>

            <com.google.android.material.chip.Chip
                android:id="@+id/chip_stressed"
                style="@style/ChipCustomStyle"
                android:layout_width="wrap_content"
                android:layout_height="48dp"
                android:text="@string/mood_stressed"
                app:chipIcon="@drawable/emoji_stressed"/>

            <com.google.android.material.chip.Chip
                android:id="@+id/chip_sad"
                style="@style/ChipCustomStyle"
                android:layout_width="wrap_content"
                android:layout_height="48dp"
                android:text="@string/mood_sad"
                app:chipIcon="@drawable/emoji_sad"/>


        </com.google.android.material.chip.ChipGroup>
    </ScrollView>



    <TextView
        android:id="@+id/subtitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:fontFamily="@font/readex_pro_light"
        android:text="@string/checkin_subtitle"
        android:textColor="@color/grey_2"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/title_container" />


    <Button
        android:id="@+id/checkin_skip_btn"
        style="@style/CogitoButton.Secondary"
        app:layout_constraintBottom_toTopOf="@id/checkin_submit_btn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginBottom="12dp"
        android:text="@string/checkin_skip_btn"
        app:icon="@drawable/ic_round_redo_24"/>

    <Button
        android:id="@+id/checkin_submit_btn"
        style="@style/CogitoButton.Primary"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:text="@string/checkin_submit_btn"
        app:icon="@drawable/ic_baseline_done_24" />

</androidx.constraintlayout.widget.ConstraintLayout>