<?xml version="1.0" encoding="utf-8"?>
<ScrollView android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    app:layout_constraintBottom_toTopOf="@+id/next_btn"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toBottomOf="@id/title_container"
    android:scrollbars="vertical"
    android:requiresFadingEdge="vertical"
    android:fadingEdgeLength="64dp"
    android:scrollbarStyle="outsideInset"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:ignore="ScrollViewSize"
        android:orientation="vertical"
        android:scrollbars="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/onboarding2_text0a"
            android:textSize="16sp"
            android:lineHeight="24dp"
            android:fontFamily="@font/readex_pro_light"/>

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:src="@drawable/image_meditating_woman"
            android:layout_marginVertical="12dp"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/onboarding2_text0b"
            android:textSize="16sp"
            android:lineHeight="24dp"
            android:fontFamily="@font/readex_pro_light"/>

        <View
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/tall_line_divider"
            android:layout_marginVertical="8dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/readex_pro_light"
            android:textColor="@color/blue_2"
            android:textSize="14sp"
            android:text="@string/onboarding2_sect1"
            android:textAllCaps="true"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/onboarding2_text1a"
            android:textSize="16sp"
            android:lineHeight="24dp"
            android:fontFamily="@font/readex_pro_light"/>

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="160dp"
            android:src="@drawable/image_listen_music"
            android:layout_marginVertical="12dp"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/onboarding2_text1b"
            android:textSize="16sp"
            android:lineHeight="24dp"

            android:fontFamily="@font/readex_pro_light"/>
        <View
            android:layout_width="match_parent"
            android:layout_height="16dp"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/onboarding2_text1c"
            android:textSize="16sp"
            android:lineHeight="24dp"
            android:fontFamily="@font/readex_pro_light"/>

        <View
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/tall_line_divider"
            android:layout_marginVertical="8dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/readex_pro_light"
            android:textColor="@color/blue_2"
            android:textSize="14sp"
            android:text="@string/onboarding2_sect2"
            android:textAllCaps="true"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/onboarding2_text2_mod"
            android:textSize="16sp"
            android:lineHeight="24dp"
            android:fontFamily="@font/readex_pro_light"/>

        <View
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/tall_line_divider"
            android:layout_marginVertical="8dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/readex_pro_light"
            android:textColor="@color/blue_2"
            android:textSize="14sp"
            android:text="@string/onboarding2_sect3"
            android:textAllCaps="true"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/onboarding2_text3"
            android:textSize="16sp"
            android:lineHeight="24dp"
            android:fontFamily="@font/readex_pro_light"/>

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="160dp"
            android:src="@drawable/image_journey"
            android:layout_marginVertical="12dp"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/onboarding2_text4"
            android:textSize="16sp"
            android:lineHeight="24dp"
            android:fontFamily="@font/readex_pro_light"/>

    </LinearLayout>
</ScrollView>