<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingHorizontal="24dp"
    android:paddingBottom="16dp">

    <LinearLayout
        android:id="@+id/title_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/readex_pro_medium"
            android:text="@string/done_title"
            android:textColor="@color/black"
            android:textSize="24sp" />

        <View
            android:layout_width="44dp"
            android:layout_height="4dp"
            android:background="@drawable/blue_rounded_rectangle" />

    </LinearLayout>


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toTopOf="@+id/done_ok_btn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/title_container"
        android:layout_marginTop="12dp"
        android:layout_marginBottom="24dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:ignore="ScrollViewSize"
            android:orientation="vertical"
            android:scrollbars="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/done_text1"
                android:textSize="16sp"
                android:lineHeight="24dp"
                android:fontFamily="@font/readex_pro_light"
                android:textColor="@color/grey_1"
                />


            <ImageView
                android:layout_width="match_parent"
                android:layout_height="170dp"
                android:src="@drawable/image_session_completed"
                android:layout_marginVertical="12dp"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/done_text2"
                android:textSize="16sp"
                android:lineHeight="24dp"
                android:fontFamily="@font/readex_pro_light"
                android:layout_marginBottom="8dp"
                android:textColor="@color/grey_1"/>


            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/done_text3"
                android:textSize="16sp"
                android:lineHeight="24dp"
                android:fontFamily="@font/readex_pro_light"
                android:textColor="@color/grey_1"/>

        </LinearLayout>
    </ScrollView>

    <Button
        android:id="@+id/done_ok_btn"
        style="@style/CogitoButton.Primary"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:text="@string/done_ok_btn"
        app:icon="@drawable/ic_baseline_done_24" />

</androidx.constraintlayout.widget.ConstraintLayout>